# cross-contract-call

./: README.md
erc1155/: Cargo.toml  erc1155.contract  erc1155.json  lib.rs
sale/: Cargo.toml  lib.rs  sale.contract  sale.json
