[package]
name = "sale"
version = "0.1.0"
authors = ["DiaData <nitin.gurbani@diadata.org>"]
edition = "2021"
publish = true
license = "MIT OR Apache-2.0"
description = "A Rust package for implementing a random oracle by DiaData."

[dependencies]
ink = { version = "4.0", default-features = false }

erc1155 = { path = "../erc1155",  default-features = false ,features = ["ink-as-dependency"]}
ink_env = { version = "4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std","erc1155/std"]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
overflow-checks = false

[profile.release]
overflow-checks = false